objects/vlocity_cmt__OrderDiscountItem__c.object
<CustomObject>
    <description>An item or category of items to which an order discount applies. Master-detail child object of Order Discount (OrderDiscount__c).</description>
    <fields>
        <fullName>vlocity_cmt__CatalogCategoryId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Catalog Category</label>
        <referenceTo>vlocity_cmt__Catalog__c</referenceTo>
        <relationshipLabel>Order Discount Items</relationshipLabel>
        <relationshipName>OrderDiscountItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__OrderDiscountId__c</fullName>
        <label>Order Discount</label>
        <referenceTo>vlocity_cmt__OrderDiscount__c</referenceTo>
        <relationshipLabel>Order Discount Items</relationshipLabel>
        <relationshipName>OrderDiscountItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Order Discount Items</relationshipLabel>
        <relationshipName>OrderDiscountItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Order Discount Item</label>
    <nameField>
        <label>Reference Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Discount Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>